--- a/assets/css/herostyle.css
+++ b/assets/css/herostyle.css
@@ -115,3 +115,63 @@ h1{
 .section4-fond-rouge{
     background-color: var(--red);
 }
+
+/* section5 */
+.section5{
+    background-image: url(../images/img33.png);
+    height: 60vh;
+    width: 100%;
+    background-size: cover;
+}
+
+
+/* mise en place footer*/
+footer{
+    background: black;
+    height: 15em;
+}
+
+
+@media  screen and (max-width:769px) {
+    #foot-web{
+        display: none;
+
+    }
+    
+}
+@media screen and (min-width:769px){
+    .foot-mobile{
+        display: none;
+    }
+    .foot-right{
+        float: right;
+    }
+}
+
+/* mise en forme des logo sur la section footer*/
+
+#logo-facebook{
+    display: inline-flex;
+    text-decoration: none;
+    margin: auto;
+    width: 25%;
+}
+#logo-facebook1{
+    
+    margin: 5%;
+    border-radius: 50%;
+    width: 10%;
+    padding: 5px;
+    
+}
+#selecteur{
+    background-color: var(--blue);
+    border-radius: 20px;
+    width: 200%;
+    color: aliceblue;
+    border-style: none;
+}
+nav ul>li{
+    color: aliceblue;
+    font-family: 'montserrat';
+}
